# ACGlass

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  build_and_install.sh  build_daemon_android.sh  build_magisk_module.sh  pack_src.sh
android_consumer/: settings.gradle
android_consumer/app/: build.gradle
android_consumer/app/src/main/: AndroidManifest.xml
android_consumer/app/src/main/java/com/acglass/app/: ACGlassPrefs.java  AppsReceiver.java  DisplayActivity.java  DisplayOverlayService.java  MainActivity.java  RootDroidspaces.java  SettingsActivity.java
android_consumer/app/src/main/jni/: CMakeLists.txt  native_consumer.c
android_consumer/app/src/main/res/values/: styles.xml
common/: protocol.h
daemon/: daemon.c
kdefix/: build.sh
libdisplay_consumer/: display_consumer.c  display_consumer.h
libdisplay_producer/: display_producer.c  display_producer.h
magisk_module/: module.prop
weston/desktop-shell/: shell.c  shell.h
weston/include/libweston/: anland-window-api.h  meson.build
weston/kiosk-shell/: kiosk-shell.c  kiosk-shell.h
weston/libweston/backend-anland/: anland.c
